--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<head>
-		<title>Stránka 2</title>
+	<head>
+		<title>Cestuj a poznávej</title>
 		<link rel="stylesheet" href="styles2.css">
+	
 		
 	</head>
 	<body>
+	<blockquote><h1 id="prvni" class="prvni-trida tucna-trida" title="nadpis">Travel Magicians</h1></blockquote>
 	
+	<img src="C:\Users\Student_08\Desktop\website\competition\competition\images\travel-magicians.jpg" alt="my">
+	</body>
+</html>
