--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 	<head>
 		<title>Cestuj a poznávej</title>
-		<link rel="stylesheet" href="styles2.css">
+		<link rel="stylesheet" type="css" href="styles2.css">
 	
 		
 	</head>
 	<body>
 	<blockquote><h1 id="prvni" class="prvni-trida tucna-trida" title="nadpis">Travel Magicians</h1></blockquote>
 	
-	<img src="C:\Users\Student_08\Desktop\website\competition\competition\images\travel-magicians.jpg" alt="my">
+	<img src="C:\Users\Student_08\Desktop\website\competition\competition\images\travel-magicians.jpg" alt="my" style="width:1650px;height:700px;">
+	
 	</body>
 </html>
