--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 	<head>
 		<title>Cestuj a poznávej</title>
-		<link rel="stylesheet" type="css" href="styles2.css">
+		<link rel="stylesheet" href="C:\Users\Student_08\Desktop\website\competition\competition\css\styles2.css">
 	
 		
 	</head>
 	<body>
-	<blockquote><h1 id="prvni" class="prvni-trida tucna-trida" title="nadpis">Travel Magicians</h1></blockquote>
+	<h1 id="prvni" class="prvni-trida tucna-trida" title="nadpis">Travel Magicians</h1>
 	
 	<img src="C:\Users\Student_08\Desktop\website\competition\competition\images\travel-magicians.jpg" alt="my" style="width:1650px;height:700px;">
-	
 	</body>
 </html>
