--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 	<head>
-		<title>Cestuj a poznávej</title>
+		<title>TP</title>
 		<link rel="stylesheet" href="C:\Users\Student_08\Desktop\website\competition\competition\css\styles2.css">
-		<h1 id="prvni" class="prvni-trida tucna-trida" title="nadpis">Travel Magicians</h1>
+		<h1 id="prvni" class="prvni-trida tucna-trida" title="nadpis">Travel Pulse<h1>
+		
 		<style>
 		.btn {
 			border: none;
 			color: white;
-			padding: 23px 34px;
+			padding: 20px 34px;
 			font-size: 25px;
 			cursor: pointer;
 		}
@@ -43,12 +44,12 @@
 			</div class="tret">
 		
 	
-				<br>
+				
 				<br>
 
 		
 			<div>
-				<img src="C:\Users\Student_08\Desktop\website\competition\competition\images\travel-magicians.jpg" alt="my" style="width:1650px;height:700px;" allign>
+				<img src="C:\Users\Student_08\Desktop\website\competition\competition\images\po.png" style="width:1660px;height:450px;" allign>
 	
 			</div>
 		</body>
