--- a/indexdruhastranka.html
+++ b/indexdruhastranka.html
@@ -51,18 +51,24 @@
 		<div class="clearfix">
 <div class="column menu">
 	<ul>
-		<li>CoconutTree</li>
-		<li>Gerharda</li>
-		<li>Klokan06</li>
-		<li>MozkomorLP01</li>
+		<li>Adresa</li>
+		<li>Email</li>
+		<li>Facebook</li>
+		<li>Tel. číslo</li>
     </ul>
  </div>
 
   <div class="column content">
-    <h1>CoconutTree</h1>
-    <p>CoconutTree je naše hlavní blogerka. Narodila se 13. 5. 1995 v Brně. Svoji kariéru jako blogerka začala v 19 letech, kdy si psala různé věci do sešítků.</p>
-	<p>Kontaktujte CoconutTree na adrese kokosik29@gmail.com</p>
+    <h1>Adresa</h1>
+   	<p>Trávní 1515</p>
+	<p>Ďábelský kopec</p>
+	<p>538 48</p>
       </div>
+	  
+	<div class="column content">
+    <h1>Email</h1>
+   	<p>velkanoha.853@gmail.cz</p>
+	 
 </div>
 
 
