--- a/index667.html
+++ b/index667.html
@@ -65,10 +65,10 @@
 				<br>
 				
 	
-			</div>
+			</div>		
+			<h3><b>Pokud nevíte kam, jsme tu pro Vás! Máme pro Vás tipy na místa, která určitě stojí za návštěvu. </h3>
 			
-			
-			<h3>Pokud nevíte kam, jsme tu pro Vás! Máme pro Vás tipy na místa, která určitě stojí za návštěvu. </h3>
+			<br>
 			
 	     <div>
 				
